@@ -17,8 +17,13 @@
 	Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+#include <boost/regex.hpp> 
+
 #include "MD5File.hh"
 
+//#define DEBUGLEVEL 23
+#include "../Preprocessor/debug.hh"
 
 using namespace std;
+using namespace boost; 
 using namespace bneijt;
